--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit bootstrap="./vendor/autoload.php" colors="true">
     <testsuites>
-        <testsuite name="Patterns">
-            <directory suffix="Test.php">src/*</directory>
+        <testsuite name="Validator">
+            <directory suffix="Test.php">src</directory>
         </testsuite>
     </testsuites>
 </phpunit>
