Add filter for code coverage; Add run config.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,5 +4,10 @@
         <testsuite name="Validator">
             <directory suffix="Test.php">src</directory>
         </testsuite>
-    </testsuites>
+</testsuites>
+    <filter>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <directory suffix="Test.php">src</directory>
+        </whitelist>
+    </filter>
 </phpunit>
